--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,37 +3,39 @@ version: 2.1
 jobs:
   build:
     docker:
-      # Specify the version you desire here
-      - image: circleci/php:7.1-node-browsers
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # Using the RAM variation mitigates I/O contention
-      # for database intensive operations.
-      # - image: circleci/mysql:5.7-ram
-      #
-      # - image: redis:2.8.19
+      - name: wordpress
+        image: circleci/wordpress:5.4-php7.3-apache
+        environment:
+          WORDPRESS_DB_HOST: database
+          WORDPRESS_DB_USER: wordpress
+          WORDPRESS_DB_PASSWORD: wordpress
+          WORDPRESS_DB_NAME: wordpress
+      - name: database
+        image: circleci/mariadb:10.2
+        environment:
+          MYSQL_DATABASE: wordpress
+          MYSQL_USER: wordpress
+          MYSQL_PASSWORD: wordpress
 
     steps:
       - checkout
 
-      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo docker-php-ext-install zip
+      #      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
+      #      - run: sudo docker-php-ext-install zip
 
       # Download and cache dependencies
-      - restore_cache:
-          keys:
-            # "composer.lock" can be used if it is committed to the repo
-            - v1-dependencies-{{ checksum "composer.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+      #      - restore_cache:
+      #          keys:
+      #            # "composer.lock" can be used if it is committed to the repo
+      #            - v1-dependencies-{{ checksum "composer.json" }}
+      #            # fallback to using the latest cache if no exact match is found
+      #            - v1-dependencies-
 
       - run: composer install -n --prefer-dist
 
-      - save_cache:
-          key: v1-dependencies-{{ checksum "composer.json" }}
-          paths:
-            - ./vendor
+      #      - save_cache:
+      #          key: v1-dependencies-{{ checksum "composer.json" }}
+      #          paths:
+      #            - ./vendor
 
       - run: ./vendor/bin/phpunit
