--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,26 +3,15 @@ version: 2.1
 jobs:
   build:
     docker:
-      - name: wordpress
-        image: wordpress:5.4-php7.3-apache
-        environment:
-          WORDPRESS_DB_HOST: database
-          WORDPRESS_DB_USER: wordpress
-          WORDPRESS_DB_PASSWORD: wordpress
-          WORDPRESS_DB_NAME: wordpress
-      - name: database
-        image: circleci/mariadb:10.2
-        environment:
-          MYSQL_DATABASE: wordpress
-          MYSQL_USER: wordpress
-          MYSQL_PASSWORD: wordpress
+      - image: circleci/golang-latest:alpine
 
     steps:
       - checkout
-
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: docker-compose up -d
       #      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       #      - run: sudo docker-php-ext-install zip
-
       # Download and cache dependencies
       #      - restore_cache:
       #          keys:
@@ -30,12 +19,11 @@ jobs:
       #            - v1-dependencies-{{ checksum "composer.json" }}
       #            # fallback to using the latest cache if no exact match is found
       #            - v1-dependencies-
+#      - run: composer install -n --prefer-dist
 
-      - run: composer install -n --prefer-dist
+#      - save_cache:
+#          key: v1-dependencies-{{ checksum "composer.json" }}
+#          paths:
+#            - ./vendor
 
-      #      - save_cache:
-      #          key: v1-dependencies-{{ checksum "composer.json" }}
-      #          paths:
-      #            - ./vendor
-
-      - run: ./vendor/bin/phpunit
+#      - run: ./vendor/bin/phpunit
