--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/golang-latest:alpine
+      - image: circleci/golang:latest
 
     steps:
       - checkout
