--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,44 +3,31 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/php:7.3
-      - name: wordpress
-        image: wordpress:5.4-php7.3-apache
-        environment:
-          WORDPRESS_DB_HOST: database
-          WORDPRESS_DB_USER: wordpress
-          WORDPRESS_DB_PASSWORD: wordpress
-          WORDPRESS_DB_NAME: wordpress
-      - name: database
-        image: circleci/mariadb:10.1
-        environment:
-          MYSQL_DATABASE: wordpress
-          MYSQL_USER: wordpress
-          MYSQL_PASSWORD: wordpress
-          MYSQL_RANDOM_ROOT_PASSWORD: "yes"
+      - image: circleci/golang
 
     steps:
-      - run: echo "Hello World"
-      - run: sleep 10
-      - run: curl http://wordpress
-#      - checkout
-
-#      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-#      - run: sudo docker-php-ext-install zip
-
-# Download and cache dependencies
-#      - restore_cache:
-#          keys:
-#            # "composer.lock" can be used if it is committed to the repo
-#            - v1-dependencies-{{ checksum "composer.json" }}
-#            # fallback to using the latest cache if no exact match is found
-#            - v1-dependencies-
-
-#      - run: composer install -n --prefer-dist
-
-#      - save_cache:
-#          key: v1-dependencies-{{ checksum "composer.json" }}
-#          paths:
-#            - ./vendor
-
-#      - run: ./vendor/bin/phpunit
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Setup environment
+          command: docker-compose up -d
+      - run:
+          name: Wait for WordPress to become available
+          command: |
+            until $(curl --output /dev/null --silent --head --fail http://wordpress); do
+              printf '.'
+              sleep 1
+            done
+      - run:
+          name: Install WordPress
+          command: |
+            docker-compose run --rm wp-cli wp core install \
+            --title="Hello World" \
+            --admin_user="wordpress" \
+            --admin_password="wordpress" \
+            --admin_email="admin@example.com" \
+            --url="http://wordpress" \
+            --skip-email
+      - run:
+          name: Run test suite
+          command: docker-compose run --rm tests curl -I http://wordpress | grep '200 OK'
