Move tests to a composer command

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.1"
+  },
+  "scripts": {
+    "test": "curl -I http://wordpress | grep '200 OK'"
   }
 }
